// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`userStore > should init with an empty user 1`] = `
{
  "$dispose": [Function],
  "$id": "counter",
  "$onAction": [Function],
  "$patch": [Function],
  "$reset": [Function],
  "$subscribe": [Function],
  "_customProperties": Set {},
  "_hmrPayload": {
    "actions": {
      "searchUser": [Function],
    },
    "getters": {},
    "hotState": RefImpl {
      "__v_isRef": true,
      "__v_isShallow": false,
      "_rawValue": {},
      "_value": {},
      "dep": undefined,
    },
    "state": [
      "githubUser",
    ],
  },
  "_hotUpdate": [Function],
  "_p": {
    "_a": null,
    "_e": EffectScope {
      "_active": true,
      "cleanups": [],
      "detached": true,
      "effects": [],
      "parent": undefined,
      "scopes": [
        EffectScope {
          "_active": true,
          "cleanups": [],
          "detached": false,
          "effects": [],
          "index": 0,
          "parent": [Circular],
        },
      ],
    },
    "_p": [],
    "_s": Map {
      "counter" => [Circular],
    },
    "install": [Function],
    "state": RefImpl {
      "__v_isRef": true,
      "__v_isShallow": false,
      "_rawValue": {
        "counter": {
          "githubUser": RefImpl {
            "__v_isRef": true,
            "__v_isShallow": false,
            "_rawValue": {},
            "_value": {},
            "dep": undefined,
          },
        },
      },
      "_value": {
        "counter": {
          "githubUser": {},
        },
      },
      "dep": undefined,
    },
    "use": [Function],
  },
  "githubUser": {},
  "searchUser": [Function],
}
`;

exports[`userStore > should search user  1`] = `
{
  "$dispose": [Function],
  "$id": "counter",
  "$onAction": [Function],
  "$patch": [Function],
  "$reset": [Function],
  "$subscribe": [Function],
  "_customProperties": Set {},
  "_hmrPayload": {
    "actions": {
      "searchUser": [Function],
    },
    "getters": {},
    "hotState": RefImpl {
      "__v_isRef": true,
      "__v_isShallow": false,
      "_rawValue": {},
      "_value": {},
      "dep": undefined,
    },
    "state": [
      "githubUser",
    ],
  },
  "_hotUpdate": [Function],
  "_p": {
    "_a": null,
    "_e": EffectScope {
      "_active": true,
      "cleanups": [],
      "detached": true,
      "effects": [],
      "parent": undefined,
      "scopes": [
        EffectScope {
          "_active": true,
          "cleanups": [],
          "detached": false,
          "effects": [],
          "index": 0,
          "parent": [Circular],
        },
      ],
    },
    "_p": [],
    "_s": Map {
      "counter" => [Circular],
    },
    "install": [Function],
    "state": RefImpl {
      "__v_isRef": true,
      "__v_isShallow": false,
      "_rawValue": {
        "counter": {
          "githubUser": RefImpl {
            "__v_isRef": true,
            "__v_isShallow": false,
            "_rawValue": {
              "status": 200,
              "user": {
                "avatar_url": "https://avatars.githubusercontent.com/u/10590076?v=4",
                "bio": "lorem ipsum dolor sit amet",
                "followers": 0,
                "following": 5,
                "html_url": "https://github.com/testeuser",
                "location": "Brazil",
                "login": "testeuser",
                "name": "Teste User",
                "public_repos": 5,
              },
            },
            "_value": {
              "status": 200,
              "user": {
                "avatar_url": "https://avatars.githubusercontent.com/u/10590076?v=4",
                "bio": "lorem ipsum dolor sit amet",
                "followers": 0,
                "following": 5,
                "html_url": "https://github.com/testeuser",
                "location": "Brazil",
                "login": "testeuser",
                "name": "Teste User",
                "public_repos": 5,
              },
            },
            "dep": undefined,
          },
        },
      },
      "_value": {
        "counter": {
          "githubUser": {
            "status": 200,
            "user": {
              "avatar_url": "https://avatars.githubusercontent.com/u/10590076?v=4",
              "bio": "lorem ipsum dolor sit amet",
              "followers": 0,
              "following": 5,
              "html_url": "https://github.com/testeuser",
              "location": "Brazil",
              "login": "testeuser",
              "name": "Teste User",
              "public_repos": 5,
            },
          },
        },
      },
      "dep": undefined,
    },
    "use": [Function],
  },
  "githubUser": {
    "status": 200,
    "user": {
      "avatar_url": "https://avatars.githubusercontent.com/u/10590076?v=4",
      "bio": "lorem ipsum dolor sit amet",
      "followers": 0,
      "following": 5,
      "html_url": "https://github.com/testeuser",
      "location": "Brazil",
      "login": "testeuser",
      "name": "Teste User",
      "public_repos": 5,
    },
  },
  "searchUser": [Function],
}
`;

exports[`userStore > should search user error 1`] = `
{
  "$dispose": [Function],
  "$id": "counter",
  "$onAction": [Function],
  "$patch": [Function],
  "$reset": [Function],
  "$subscribe": [Function],
  "_customProperties": Set {},
  "_hmrPayload": {
    "actions": {
      "searchUser": [Function],
    },
    "getters": {},
    "hotState": RefImpl {
      "__v_isRef": true,
      "__v_isShallow": false,
      "_rawValue": {},
      "_value": {},
      "dep": undefined,
    },
    "state": [
      "githubUser",
    ],
  },
  "_hotUpdate": [Function],
  "_p": {
    "_a": null,
    "_e": EffectScope {
      "_active": true,
      "cleanups": [],
      "detached": true,
      "effects": [],
      "parent": undefined,
      "scopes": [
        EffectScope {
          "_active": true,
          "cleanups": [],
          "detached": false,
          "effects": [],
          "index": 0,
          "parent": [Circular],
        },
      ],
    },
    "_p": [],
    "_s": Map {
      "counter" => [Circular],
    },
    "install": [Function],
    "state": RefImpl {
      "__v_isRef": true,
      "__v_isShallow": false,
      "_rawValue": {
        "counter": {
          "githubUser": RefImpl {
            "__v_isRef": true,
            "__v_isShallow": false,
            "_rawValue": {
              "status": 404,
              "user": {},
            },
            "_value": {
              "status": 404,
              "user": {},
            },
            "dep": undefined,
          },
        },
      },
      "_value": {
        "counter": {
          "githubUser": {
            "status": 404,
            "user": {},
          },
        },
      },
      "dep": undefined,
    },
    "use": [Function],
  },
  "githubUser": {
    "status": 404,
    "user": {},
  },
  "searchUser": [Function],
}
`;
